// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="c-chk__hint c-chk__hint--toggle is-rtl "
  data-garden-id="toggles.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="c-chk__hint c-chk__hint--toggle "
  data-garden-id="toggles.hint"
  data-garden-version="version"
/>
`;
